Quick refactor for clarity

--- a/app/src/main/res/layout/device_list_fragment.xml
+++ b/app/src/main/res/layout/device_list_fragment.xml
@@ -8,5 +8,5 @@
     android:layout_height="match_parent"
     android:scrollbars="vertical"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    tools:context=".ui.main.MainFragment"
+    tools:context=".devicelist.DeviceListFragmnet"
     tools:listitem="@layout/device_cell" />
